--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@fireworks-js/vue": "^2.10.7",
     "@supabase/supabase-js": "^2.32.0",
+    "bootstrap": "^5.3.2",
     "pinia": "^2.1.4",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4"
@@ -23,7 +24,7 @@
     "@vue/tsconfig": "^0.4.0",
     "npm-run-all": "^4.1.5",
     "typescript": "~5.1.6",
-    "vite": "^4.4.6",
+    "vite": "^4.4.11",
     "vue-tsc": "^1.8.6"
   }
 }
